pasarela de pago

--- a/sexshop/appsexshop/templates/carrito/carrito.html
+++ b/sexshop/appsexshop/templates/carrito/carrito.html
@@ -24,8 +24,12 @@
           <button class="btn btn-sm" data-bs-toggle="modal" data-bs-target="#paymentModal" style="background-color: #f5365c; color: white; font-size: 1rem; border-radius: 6px;">
             Pagar Todo
           </button>
+          <button class="btn btn-warning" id="btnPayPal" style="color: white; font-size: 1rem; border-radius: 6px;">
+            <i class="fab fa-paypal"></i> Pagar con PayPal
+          </button>
         </div>
       </div>
+      <div id="paypal-form-container" class="mt-3"></div>
     </div>
 
     <!-- Modal para el formulario -->
@@ -74,4 +78,4 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   </body>
-  </html> 
+  </html>
