--- a/sexshop/appsexshop/templates/LadingPage.html
+++ b/sexshop/appsexshop/templates/LadingPage.html
@@ -100,8 +100,13 @@
                      <li><a class="dropdown-item" href="{% url 'listadocategorias' %}"><i class="fa-regular fa-file"></i> Gestiones</a></li>
                      {% endif %}
 
+                     <li><a class="dropdown-item" href="{% url 'solicitud' %}"><i class="fa-solid fa-file-circle-plus"></i> Solicitud</a></li>
+
+
                      <li><hr class="dropdown-divider"></li>
                      <li><a class="dropdown-item text-danger" href="{% url 'logout' %}"><i class="fa-solid fa-power-off"></i> Cerrar Sesión</a></li>
+
+                     
                  </ul>
              </div>
          {% else %}
