--- a/sexshop/appsexshop/templates/carrito/productos.html
+++ b/sexshop/appsexshop/templates/carrito/productos.html
@@ -52,9 +52,15 @@
         <div class="search-container me-3">
           <input id="query" type="search" class="form-control" placeholder="Buscar producto..." autocomplete="off">
         </div>
+
+           <a href="" class="btn btn-outline-secondary">
+          <i class="fa-solid fa-bell"></i>
+        </a>
+
         <a href="{% url 'carrito' %}" class="btn btn-outline-secondary me-2">
           <i class="fas fa-shopping-cart"></i> <span id="cartCount">0</span>
         </a>
+     
         <button class="btn btn-outline-secondary">
            <a href="{% url 'perfiles' %}" style="color: #f5365c;"><i class="fas fa-user"></i> </a> 
         </button>
@@ -143,6 +149,8 @@
 <div id="alerta-carrito" class="alert alert-success position-fixed top-0 start-50 translate-middle-x mt-3 text-center d-none shadow rounded-3 px-4 py-2" style="z-index: 9999; font-size: 1rem;">
   Producto agregado al carrito 💖
 </div>
+
+
 
 <!-- SCRIPTS -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
