se implemento sistema de notificaciones de productos agotados

--- a/sexshop/appsexshop/templates/carrito/productos.html
+++ b/sexshop/appsexshop/templates/carrito/productos.html
@@ -53,18 +53,27 @@
           <input id="query" type="search" class="form-control" placeholder="Buscar producto..." autocomplete="off">
         </div>
 
-           <a href="" class="btn btn-outline-secondary">
-          <i class="fa-solid fa-bell"></i>
+ {% if request.session.username %}
+
+ {% if request.session.role == 1 %}
+          <a href="{% url 'lista_notificaciones' %}" class="btn btn-outline-secondary">
+  <i class="fa-solid fa-bell"></i>
         </a>
+             {% endif %}
+         {% endif %}
+         
+       
 
         <a href="{% url 'carrito' %}" class="btn btn-outline-secondary me-2">
           <i class="fas fa-shopping-cart"></i> <span id="cartCount">0</span>
         </a>
      
-        <button class="btn btn-outline-secondary">
-           <a href="{% url 'perfiles' %}" style="color: #f5365c;"><i class="fas fa-user"></i> </a> 
-        </button>
+       <a href="{% url 'perfiles' %}" class="btn btn-outline-secondary" style="color: #f5365c;">
+    <i class="fas fa-user"></i>
+</a>
+      
       </div>
+       
 
     </div>
   </div>
