--- a/sexshop/appsexshop/templates/carrito/productos.html
+++ b/sexshop/appsexshop/templates/carrito/productos.html
@@ -56,9 +56,19 @@
  {% if request.session.username %}
 
  {% if request.session.role == 1 %}
-          <a href="{% url 'lista_notificaciones' %}" class="btn btn-outline-secondary">
-  <i class="fa-solid fa-bell"></i>
-        </a>
+         
+      <a href="{% url 'lista_notificaciones' %}" class="btn btn-outline-secondary position-relative">
+    <i class="fa-solid fa-bell"></i>
+    {% with notificaciones_no_leidas=notificaciones|dictsort:"-fecha"|length %}
+        {% if notificaciones_no_leidas > 0 %}
+            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                {{ notificaciones_no_leidas }}
+            </span>
+        {% endif %}
+    {% endwith %}
+</a>
+
+
              {% endif %}
          {% endif %}
          
