se actualizo diseno de vista historial de pedidos

--- a/sexshop/appsexshop/static/css/pedido.css
+++ b/sexshop/appsexshop/static/css/pedido.css
@@ -59,9 +59,14 @@
     }
 
   .btn:hover{
-    background-color: black;
+    background-color: #ec5876;
     color: white;
   }
+  
+  .btn:active {
+  background-color: #c44461; 
+  color: white;
+}
 
    /*nav y buscador*/
  @media (max-width: 776px) {
